feature: update appendEvent method and remove unnecessary method
